@@ -6,6 +6,7 @@
    Copyright (C) 2009-2010 Nokia Corporation
 
    @author Timo Olkkonen <ext-timo.p.olkkonen@nokia.com>
+   @author Matias Muhonen <ext-matias.muhonen@nokia.com>
 
    This file is part of SystemSW QtAPI.
 
@@ -26,7 +27,13 @@
 #include <qmusbmode.h>
 #include <QTest>
 #include <QDebug>
-#include <QProcess>
+
+#include <sys/types.h>
+#include <errno.h>
+#include <fcntl.h>
+#include <stdio.h>
+#include <string.h>
+#include <time.h>
 
 using namespace MeeGo;
 
@@ -74,27 +81,48 @@ private slots:
     }
 
     void testMountStatus() {
-        QProcess mount;
-        mount.start("grep MyDocs /proc/mounts");
-        if (!mount.waitForFinished()) {
-            return;
-        }
-        QByteArray output = mount.readAllStandardOutput();
-        if (output.contains("MyDocs")) {
-            // mydocs mounted, so we should either get a read-only or a read-write mount
-            QmUSBMode::MountOptionFlags mountOptions = mode->mountStatus(QmUSBMode::DocumentDirectoryMount);
-            bool readWriteMount = (mountOptions & QmUSBMode::ReadWriteMount);
-            bool readOnlyMount = (mountOptions & QmUSBMode::ReadOnlyMount);
+        struct timespec ts = { 0, 0 };
+        char *path = 0;
+        FILE *f;
+        QmUSBMode::MountOptionFlags mountOptions = mode->mountStatus(QmUSBMode::DocumentDirectoryMount);
 
-            if (output.contains(" rw,") || output.contains(",rw ") || output.contains(",rw,")) {
-                QVERIFY(readWriteMount);
-                QVERIFY(!readOnlyMount);
-            }
-            if (output.contains(" ro,") || output.contains(",ro ") || output.contains(",ro,")) {
-                QVERIFY(readOnlyMount);
-                QVERIFY(!readWriteMount);
+        if (mountOptions.testFlag(MeeGo::QmUSBMode::ReadWriteMount)) {
+            qDebug() << "Got the QmUSBMode::ReadWriteMount flag";
+        }
+
+        if (mountOptions.testFlag(MeeGo::QmUSBMode::ReadOnlyMount)) {
+            qDebug() << "Got the QmUSBMode::ReadOnlyMount flag";
+        }
+
+        QVERIFY(clock_gettime(CLOCK_MONOTONIC, &ts) == 0);
+        QVERIFY(asprintf(&path, "/home/user/MyDocs/qmsystem.usbmode-test.%lu.%lu",
+                         (unsigned long)ts.tv_sec,
+                         (unsigned long)ts.tv_nsec) != -1);
+
+        qDebug() << "Checking read and write access to " << path;
+
+        f = fopen(path, "a+");
+        if (f) {
+            qDebug() << "Got read and write access to /home/user/MyDocs";
+
+            QVERIFY(mountOptions.testFlag(MeeGo::QmUSBMode::ReadWriteMount));
+            fclose(f);
+        } else {
+            qDebug() << "No read and write access to /home/user/MyDocs: " <<  strerror(errno);
+
+            if (access("/home/user/MyDocs", R_OK) == 0) {
+                qDebug() << "Got read access to /home/user/MyDocs";
+
+                QVERIFY(mountOptions.testFlag(MeeGo::QmUSBMode::ReadOnlyMount));
+            } else {
+                qDebug() << "No read or write access to /home/user/MyDocs";
+
+                QVERIFY(!mountOptions.testFlag(MeeGo::QmUSBMode::ReadWriteMount));
+                QVERIFY(!mountOptions.testFlag(MeeGo::QmUSBMode::ReadOnlyMount));
             }
         }
+
+        free(path);
     }
 
     void cleanupTestCase() {
