@@ -4,6 +4,7 @@ qmsystem2 (1.3.2) unstable; urgency=low
   * QmHeartbeat documentation is unclear (Fixes: NB#266900)
   * Improve error handling of QmCABC (Fixes: NB#270772)
   * QmUSBMode::mountStatus does not return correct info (Fixes: NB#273012)
+  * Make the usbmode-test more robust
 
  -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 18 Jul 2011 14:00:26 +0300
 
